--- a/ML-model/requirements.txt
+++ b/ML-model/requirements.txt
@@ -4,3 +4,8 @@ joblib==1.4.2
 numpy==2.1.1
 pymongo==4.12.1
 python-dotenv==1.0.0
+pandas==2.2.2
+numpy==1.26.4
+openpyxl==3.1.2
+scikit-learn==1.3.2
+dnspython==2.4.2
