--- a/ML-model/requirements.txt
+++ b/ML-model/requirements.txt
@@ -1,11 +1,11 @@
-Flask==3.1.0
-Flask-CORS==5.0.1
-joblib==1.4.2
-numpy==2.1.1
-pymongo==4.12.1
-python-dotenv==1.0.0
-pandas==2.2.2
 
-openpyxl==3.1.2
-scikit-learn==1.3.2
 dnspython==2.4.2
+Flask==2.3.3
+Flask-Cors==4.0.0
+pandas==2.2.2
+numpy==1.24.4 
+joblib==1.4.2
+openpyxl==3.1.2
+python-dotenv==1.0.1
+pymongo==4.6.1
+scikit-learn==1.3.2  
