--- a/ML-model/requirements.txt
+++ b/ML-model/requirements.txt
@@ -1,5 +1,11 @@
+
+dnspython==2.4.2
 Flask==3.1.0
-Flask-CORS==5.0.1
-joblib==1.4.2
+Flask-Cors==5.0.1
+pandas==2.2.3
 numpy==2.1.1
+joblib==1.4.2
+openpyxl==3.1.2
+python-dotenv==1.1.0
 pymongo==4.12.1
+scikit-learn==1.6.1
